[metadata]
name = pyhearthis
version = 0.0.4
url = https://github.com/universalappfactory/pyhearthis
author = universalappfactory
license = MIT
license_file = LICENSE
description = A python client for the hearthis.at music community API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Multimedia
    Topic :: Multimedia :: Sound/Audio
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.6
install_requires =
    aiohttp

[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-black
    flake8-bugbear
    flake8-import-order
    isort[pyproject]
test =
    unittest
dev =
    %(lint)s
    %(test)s


[options.packages.find]
exclude =
    tests
    tests.*


[flake8]
application-import-names = pyhearthis, tests
max-line-length = 80
exclude = .git, .tox, build
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # B950: line too long (soft speed limit)
    B950
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503